--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,6 @@
       </div>
 
     </div>
-    <span class="click">click through cycle through some photos</span>
+    <!-- <span class="click">click through cycle through some photos</span> -->
   </div>
 </html>
