ui: noise change and pepsi commercial

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ThreeJS</title>
-
+    <title>lasse's website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -39,14 +38,27 @@
       </h3>
       <h3>full stack, computer vision, web graphics</h3>
       <div class="icons">
-        <a href="https://www.linkedin.com/in/lassenordahl" class="link" target="_blank"
-          ><i class="fa fa-linkedin"></i
-        ></a>
-        <a href="https://www.github.com/lassenordahl" class="link" target="_blank"
-          ><i class="fa fa-github"></i
-        ></a>
+        <a
+          href="https://www.linkedin.com/in/lassenordahl"
+          class="link"
+          target="_blank"
+        >
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a
+          href="https://www.github.com/lassenordahl"
+          class="link"
+          target="_blank"
+        >
+          <i class="fa fa-github"></i>
+        </a>
+        <a href="mailto:lasseanordahl@gmail.com" class="link">
+          <i class="fa fa-envelope"></i>
+        </a>
+        <a href="https://twitter.com/pepsi/status/1034523641332080641?lang=en" class="link" target="_blank" >
+          <i class="fa fa-question"></i>
+        </a>
       </div>
-
     </div>
   </div>
 </html>
