--- a/src/index.html
+++ b/src/index.html
@@ -12,49 +12,55 @@
     />
     <script src="https://use.fontawesome.com/85f1ae5dd5.js"></script>
   </head>
-  <div class="container scale">
-    <canvas class="webgl"></canvas>
-    <div class="content">
-      <div class="gap"></div>
-      <h1>Lasse Nordahl</h1>
-      <h2>
-        software engineer @
-        <a href="https://cockroachlabs.cloud" class="link" target="_blank"
-          >Cockroach Labs</a
-        >
-      </h2>
-      <h3>
-        previously @
-        <a
-          href="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive"
-          class="link"
-          target="_blank"
-          >New York Times R&D</a
-        >
-      </h3>
-      <h3>full stack, computer vision, web graphics</h3>
-      <div class="icons">
-        <a
-          href="https://www.linkedin.com/in/lassenordahl"
-          class="link"
-          target="_blank"
-        >
-          <i class="fa fa-linkedin"></i>
-        </a>
-        <a
-          href="https://www.github.com/lassenordahl"
-          class="link"
-          target="_blank"
-        >
-          <i class="fa fa-github"></i>
-        </a>
-        <a href="mailto:lasseanordahl@gmail.com" class="link">
-          <i class="fa fa-envelope"></i>
-        </a>
-        <a href="https://twitter.com/pepsi/status/1034523641332080641?lang=en" class="link" target="_blank" >
-          <i class="fa fa-question"></i>
-        </a>
+  <body>
+    <div class="container container--portfolio scale">
+      <canvas class="webgl"></canvas>
+      <div class="content">
+        <div class="gap"></div>
+        <h1>Lasse Nordahl</h1>
+        <h2>
+          software engineer @
+          <a href="https://cockroachlabs.cloud" class="link" target="_blank"
+            >Cockroach Labs</a
+          >
+        </h2>
+        <h3>
+          previously @
+          <a
+            href="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive"
+            class="link"
+            target="_blank"
+            >New York Times R&D</a
+          >
+        </h3>
+        <h3>full stack, computer vision, web graphics</h3>
+        <div class="icons">
+          <a
+            href="https://www.linkedin.com/in/lassenordahl"
+            class="link"
+            target="_blank"
+          >
+            <i class="fa fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.github.com/lassenordahl"
+            class="link"
+            target="_blank"
+          >
+            <i class="fa fa-github"></i>
+          </a>
+          <a href="mailto:lasseanordahl@gmail.com" class="link">
+            <i class="fa fa-envelope"></i>
+          </a>
+          <a
+            href="https://twitter.com/pepsi/status/1034523641332080641?lang=en"
+            class="link"
+            target="_blank"
+          >
+            <i class="fa fa-question"></i>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
+  </body>
 </html>
