--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -12,49 +12,93 @@
     />
     <script src="https://use.fontawesome.com/85f1ae5dd5.js"></script>
   </head>
-  <div class="container scale">
-    <canvas class="webgl"></canvas>
-    <div class="content">
-      <div class="gap"></div>
-      <h1>Lasse Nordahl</h1>
-      <h2>
-        software engineer @
-        <a href="https://cockroachlabs.cloud" class="link" target="_blank"
-          >Cockroach Labs</a
-        >
-      </h2>
-      <h3>
-        previously @
-        <a
-          href="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive"
-          class="link"
-          target="_blank"
-          >New York Times R&D</a
-        >
-      </h3>
-      <h3>full stack, computer vision, web graphics</h3>
-      <div class="icons">
-        <a
-          href="https://www.linkedin.com/in/lassenordahl"
-          class="link"
-          target="_blank"
-        >
-          <i class="fa fa-linkedin"></i>
-        </a>
-        <a
-          href="https://www.github.com/lassenordahl"
-          class="link"
-          target="_blank"
-        >
-          <i class="fa fa-github"></i>
-        </a>
-        <a href="mailto:lasseanordahl@gmail.com" class="link">
-          <i class="fa fa-envelope"></i>
-        </a>
-        <a href="https://twitter.com/pepsi/status/1034523641332080641?lang=en" class="link" target="_blank" >
-          <i class="fa fa-question"></i>
-        </a>
+  <body>
+    <div class="container container--portfolio scale">
+      <canvas class="webgl"></canvas>
+      <div class="content">
+        <div class="gap"></div>
+        <h1>Lasse Nordahl</h1>
+        <h2>
+          software engineer @
+          <a href="https://cockroachlabs.cloud" class="link" target="_blank"
+            >Cockroach Labs</a
+          >
+        </h2>
+        <h3>
+          previously @
+          <a
+            href="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive"
+            class="link"
+            target="_blank"
+            >New York Times R&D</a
+          >
+        </h3>
+        <h3>full stack, computer vision, web graphics</h3>
+        <div class="icons">
+          <a
+            href="https://www.linkedin.com/in/lassenordahl"
+            class="link"
+            target="_blank"
+          >
+            <i class="fa fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.github.com/lassenordahl"
+            class="link"
+            target="_blank"
+          >
+            <i class="fa fa-github"></i>
+          </a>
+          <a href="mailto:lasseanordahl@gmail.com" class="link">
+            <i class="fa fa-envelope"></i>
+          </a>
+          <a
+            href="https://twitter.com/pepsi/status/1034523641332080641?lang=en"
+            class="link"
+            target="_blank"
+          >
+            <i class="fa fa-question"></i>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="more-content">
+      <div class="column">
+        <div class="line"></div>
+        <h1>portfolio</h1>
+
+        <h2 class="top">download.zip & david.mov</h2>
+        <p>
+          I've worked on some sites for a
+          <a
+            href="https://blog.google/products/registry/8-new-top-level-domains-for-dads-grads-tech/"
+            >blogpost advertising Google's new top-level-domains.</a
+          >
+        </p>
+        <iframe src="https://www.download.zip" frameborder="0"></iframe>
+        <p>
+          The screen overlay kinda doesn't work in an iframe. @lasse plz fix.
+        </p>
+        <iframe src="https://www.david.mov" frameborder="0"></iframe>
+
+        <h2 class="top">cockroachlabs.cloud</h2>
+        <p>
+          I currently work on growth, core user facing features, and sql
+          execution in the console at Cockroach Labs.
+        </p>
+        <img src="./../static/images/signup.webp" />
+        <img src="./../static/images/shell.webp" />
+
+        <h2 class="top">papertrail</h2>
+        <p>
+          While working at NYT R&D, I built an OCR tool that used newer OCR
+          models to bulk-transcribe newspapers into a digital format.
+        </p>
+        <iframe
+          src="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive/"
+          frameborder="0"
+        ></iframe>
+      </div>
+    </div>
+  </body>
 </html>
