--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
     <script src="https://use.fontawesome.com/85f1ae5dd5.js"></script>
   </head>
   <body>
-    <div class="container container--portfolio scale">
-      <canvas class="webgl"></canvas>
+    <div class="container container scale">
       <div class="content">
+        <canvas class="webgl"></canvas>
         <div class="gap"></div>
         <h1>Lasse Nordahl</h1>
         <h2>
