--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="container container--portfolio scale">
-      <canvas class="webgl"></canvas>
       <div class="content">
+        <canvas class="webgl"></canvas>
         <div class="gap"></div>
         <h1>Lasse Nordahl</h1>
         <h2>
@@ -65,39 +65,79 @@
     <div class="more-content">
       <div class="column">
         <div class="line"></div>
-        <h1>portfolio</h1>
+        <h1>Portfolio</h1>
 
         <h2 class="top">download.zip & david.mov</h2>
         <p>
           I've worked on some sites for a
           <a
             href="https://blog.google/products/registry/8-new-top-level-domains-for-dads-grads-tech/"
+            target="_blank"
             >blogpost advertising Google's new top-level-domains.</a
           >
+          These were mostly for fun, and done in a few days.
         </p>
         <iframe src="https://www.download.zip" frameborder="0"></iframe>
-        <p>
+        <div class="iframe-link">
+          <a href="https://www.download.zip" target="_blank"
+            >www.download.zip</a
+          >
+        </div>
+        <p class="top">
           The screen overlay kinda doesn't work in an iframe. @lasse plz fix.
         </p>
         <iframe src="https://www.david.mov" frameborder="0"></iframe>
-
-        <h2 class="top">cockroachlabs.cloud</h2>
+        <div class="iframe-link">
+          <a href="https://www.david.mov" target="_blank">www.david.mov</a>
+        </div>
+        <h2 class="top">
+          <a href="https://cockroachlabs.cloud" target="_blank"
+            >cockroachlabs.cloud</a
+          >
+        </h2>
         <p>
           I currently work on growth, core user facing features, and sql
           execution in the console at Cockroach Labs.
         </p>
         <img src="./../static/images/signup.webp" />
-        <img src="./../static/images/shell.webp" />
-
-        <h2 class="top">papertrail</h2>
         <p>
-          While working at NYT R&D, I built an OCR tool that used newer OCR
-          models to bulk-transcribe newspapers into a digital format.
+          I worked on launching the SQL Shell as a way of improving first query
+          rates and early user retention. The SQL Shell wound up being the most
+          used feature in Cloud, recieving more requests than our ListClusters
+          endpoint.
+        </p>
+        <p>
+          Theres a
+          <a
+            href="https://www.cockroachlabs.com/blog/cockroachdb-sql-in-browser/"
+            target="_blank"
+            >blogpost going over most of the features.</a
+          >
+        </p>
+        <img src="./../static/images/shell.webp" />
+        <h2 class="top">Papertrail - OCR Research</h2>
+        <p>
+          While working at
+          <a href="https://rd.nytimes.com/" target="_blank">NYT R&D</a>, I built
+          an OCR tool that used newer CV models to bulk-transcribe newspapers
+          into a digital format.
+        </p>
+        <p>
+          We initially wanted to explore performance of new OCR models for 3
+          months, but wound up extending it to a 9 month project since we could
+          piece together articles using more-accurate location data.
         </p>
         <iframe
           src="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive/"
           frameborder="0"
         ></iframe>
+        <div class="iframe-link">
+          <a
+            href="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive/"
+            target="_blank"
+            >Using computer vision to create a more active digital archive.</a
+          >
+        </div>
       </div>
     </div>
   </body>
