--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,17 @@
         <div class="gap"></div>
         <h1 class="name">Lasse Nordahl</h1>
         <h2>
-          senior software engineer @
-          <a href="https://cockroachlabs.cloud" class="link" target="_blank"
-            >Cockroach Labs</a
+          software engineer @
+          <a href="https://www.palantir.com/" class="link" target="_blank"
+            >Palantir Technologies</a
           >
         </h2>
         <h3>
           previously @
+          <a href="https://cockroachlabs.cloud" class="link" target="_blank"
+            >Cockroach Labs</a
+          >
+          and
           <a
             href="https://rd.nytimes.com/projects/using-computer-vision-to-create-a-more-accurate-digital-archive"
             class="link"
