--- a/src/index.html
+++ b/src/index.html
@@ -77,6 +77,9 @@
           >
             <i class="fa fa-question"></i>
           </a>
+          <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="Toggle dark mode">
+            <i class="fa fa-lightbulb-o"></i>
+          </button>
         </div>
       </div>
     </div>
