--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="https://use.fontawesome.com/85f1ae5dd5.js"></script>
+
 
     <!-- Google tag (gtag.js) -->
     <script
@@ -60,24 +60,24 @@
             class="link"
             target="_blank"
           >
-            <i class="fa fa-linkedin"></i>
+            <i data-lucide="linkedin"></i>
           </a>
           <a
             href="https://www.github.com/lassenordahl"
             class="link"
             target="_blank"
           >
-            <i class="fa fa-github"></i>
+            <i data-lucide="github"></i>
           </a>
           <a href="mailto:lasseanordahl@gmail.com" class="link">
-            <i class="fa fa-envelope"></i>
+            <i data-lucide="mail"></i>
           </a>
           <a
             href="https://twitter.com/pepsi/status/1034523641332080641?lang=en"
             class="link"
             target="_blank"
           >
-            <i class="fa fa-question"></i>
+            <i data-lucide="help-circle"></i>
           </a>
         </div>
       </div>
