--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
     <div class="container hero">
       <div class="content">
         <div class="glow-container">
+          <iframe id="iframe-linkedin" class="social-iframe" src="about:blank" data-src="https://www.linkedin.com/in/lassenordahl"></iframe>
+          <iframe id="iframe-github" class="social-iframe" src="about:blank" data-src="https://www.github.com/lassenordahl"></iframe>
+          <iframe id="iframe-twitter" class="social-iframe" src="about:blank" data-src="https://x.com/lassenordahl"></iframe>
           <img class="glow-image" src="../static/images/01.webp" alt="" aria-hidden="true" />
           <canvas class="webgl"></canvas>
         </div>
@@ -68,6 +71,13 @@
             target="_blank"
           >
             <i data-lucide="github"></i>
+          </a>
+          <a
+            href="https://x.com/lassenordahl"
+            class="link"
+            target="_blank"
+          >
+            <i data-lucide="twitter"></i>
           </a>
           <a href="mailto:lasseanordahl@gmail.com" class="link">
             <i data-lucide="mail"></i>
